--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           dotnet-version: 3.0.x
       - name: Install Dependencies
         run: dotnet restore
-        working-directory: .\api
+        working-directory: api
       - name: build
         run: dotnet build --configuration release
       - name: Deploying
