--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,44 @@
-name: Deploy
+name: Build and Deploy
 'on':
-  push: null
-  workflow_dispatch: null
+  push:
+    branches:
+      - master
 jobs:
-  my-deplop:
+  build:
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Install Dotnet
-        uses: actions/setup-dotnet@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node 12.x
+        uses: actions/setup-node@v1
         with:
-          dotnet-version: 3.0.x
-      - name: Install Dependencies
-        run: dotnet restore        
-      - name: build
-        working-directory: api
-        run: dotnet build --configuration release
-      - name: Deploying
-        run: echo "Deploying...."
+          node-version: 12.x
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Archive build
+        if: success()
+        uses: actions/upload-artifact@v1
+        with:
+          name: deploy_dist
+          path: dist
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    name: Deploying to surge
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download build
+        uses: actions/download-artifact@v1
+        with:
+          name: deploy_dist
+      - name: Install surge and fire deployment
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - run: npm install -g surge
+      - run: >-
+          surge ./deploy_dist/projectname ${{ secrets.SURGE_DOMAIN }} --token
+          ${{ secrets.SURGE_TOKEN }}
