--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: deploy_dist
-          path: dist
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    name: Deploying to surge
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download build
+          path: api
         uses: actions/download-artifact@v1
         with:
           name: deploy_dist
